# QBorrow

./: CMakeLists.txt  LICENSE  readme.md
benchmark-autoQ/MCX/: gen-circ  gen-circ.cpp  run.sh
benchmark-autoQ/MCX/1000/: circuit.qasm  pre.hsl
benchmark-autoQ/MCX/1500/: circuit.qasm  post.hsl
benchmark-autoQ/MCX/2000/: circuit.qasm  post.hsl
benchmark-autoQ/MCX/2500/: circuit.qasm  pre.hsl
benchmark-autoQ/MCX/3000/: circuit.qasm  post.hsl
benchmark-autoQ/MCX/3500/: circuit.qasm  post.hsl
benchmark-autoQ/MCX/500/: circuit.qasm  post.hsl
benchmark-autoQ/adder/: gen-circ  gen-circ.cpp  run.sh
benchmark-autoQ/adder/100/: circuit.qasm  pre.hsl
benchmark-autoQ/adder/125/: circuit.qasm  pre.hsl
benchmark-autoQ/adder/150/: circuit.qasm  post.hsl
benchmark-autoQ/adder/175/: circuit.qasm  pre.hsl
benchmark-autoQ/adder/200/: circuit.qasm  post.hsl
benchmark-autoQ/adder/50/: circuit.qasm  post.hsl
benchmark-autoQ/adder/75/: circuit.qasm  post.hsl
example/: eg1-syntax-parse.qbr  eg1.qbr  eg1.qdt  eg2-nested-let.qbr  eg2.qbr  eg3.qbr  eg4.qbr  eg5-nested-borrow-alloc.qbr  eg6-out-of-range.qbr  eg7-not-disjoint.qbr
examples/: adder.qbr  eg2-nested-let.qbr  eg3-nested-for.qbr  eg4-nested-borrow.qbr  eg8-boolean.qbr  eg8-three-controlled.qbr  eg9-adder.qbr  mcx.qbr
examples/syntax/: eg1-syntax-parse.qbr  eg5-nested-borrow-alloc.qbr  eg6-out-of-range.qbr  eg8-three-controlled.qbr
grammar/: QBorrow.g4
include/backend/: Interpreter.h  Verifier_Bitwuzla.h  Verifier_CVC5.h
include/frontend/: Argument.h  Evaluatable.h  Parser.h  Preprocessor.h  Printable.h  Program.h  Substitutable.h
include/frontend/AST/: AST.h  AST_Expr.h  AST_Function.h  AST_Register.h  AST_Stmt.h
include/frontend/antlr-gen/: QBorrowBaseListener.h  QBorrowBaseVisitor.h  QBorrowLexer.h  QBorrowListener.h  QBorrowParser.h  QBorrowVisitor.h
src/: AST.cpp  Argument.cpp  Parser.cpp  QBorrowBaseListener.cpp  QBorrowBaseVisitor.cpp  QBorrowLexer.cpp  QBorrowListener.cpp  QBorrowParser.cpp  QBorrowVisitor.cpp  QDirtyBaseListener.cpp  QDirtyBaseVisitor.cpp  QDirtyLexer.cpp  QDirtyListener.cpp  QDirtyParser.cpp  QDirtyVisitor.cpp  main.cpp
src/AST/: AST_Expr.cpp
src/antlr-gen/: QBorrowBaseListener.cpp  QBorrowLexer.cpp  QBorrowListener.cpp  QBorrowParser.cpp
src/backend/: Interpreter.cpp  Verifier_Bitwuzla.cpp  Verifier_CVC5.cpp
src/frontend/: Argument.cpp  Parser.cpp  Preprocessor.cpp  Printable.cpp  Program.cpp
src/frontend/AST/: AST_Expr.cpp  AST_Function.cpp  AST_Register.cpp  AST_Stmt.cpp
src/frontend/antlr-gen/: QBorrowBaseListener.cpp  QBorrowBaseVisitor.cpp  QBorrowLexer.cpp  QBorrowListener.cpp  QBorrowParser.cpp  QBorrowVisitor.cpp
src/grammar/: QBorrow.g4  QDirty.g4
src/include/: AST.h  Argument.h  Parser.h  QBorrowBaseListener.h  QBorrowBaseVisitor.h  QBorrowLexer.h  QBorrowListener.h  QBorrowParser.h  QBorrowVisitor.h  QDirtyBaseListener.h  QDirtyBaseVisitor.h  QDirtyLexer.h  QDirtyListener.h  QDirtyParser.h  QDirtyVisitor.h
src/include/AST/: AST_Expr.h  AST_Function.h
src/include/antlr-gen/: QBorrowLexer.h  QBorrowParser.h  QBorrowVisitor.h
